--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="icon_meta">Tu meta</string>
     <string name="lbl_header_metas">Mis Metas</string>
     <string name="lbl_header_frases">Frases Motivadoras</string>
+    <string name="texto_primerpaso">Toca el botón <b><font color="#9333ea">"Ver metas"</font></b> para establecer tu primera meta</string>
+
 </resources>
